--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@effect/platform": "^0.90.6",
+    "@effect/schema": "^0.75.5",
+    "assemblyai": "^4.15.0",
     "effect": "^3.17.9",
     "fluent-ffmpeg": "^2.1.3",
     "ytdl-core": "^4.11.5"
