--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "effect": "^3.17.9",
     "fluent-ffmpeg": "^2.1.3",
     "play-dl": "^1.9.7",
+    "youtube-dl-exec": "^3.0.24",
     "ytdl-core": "^4.11.5"
   }
 }
